--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,14 @@ android {
         signingConfig signingConfigs.debug
     }
 
+    packagingOptions {
+        exclude 'assets/xgwifi.xml' // will not include NOTICE file
+        exclude 'assets/soconfig.cfg'
+        exclude 'assets/jni.ini'
+        exclude 'com/qq/jce/wup/wup.properties'
+        exclude 'src/com/qq/jce/wup/wup.properties'
+    }
+
     lintOptions{
         checkReleaseBuilds false
         abortOnError false
@@ -74,13 +82,16 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+//    compile 'com.tencent.ilivesdk:ilivesdk:1.8.5.0.2'
+//    compile 'com.tencent.livesdk:livesdk:1.1.4'
+//    compile 'com.tencent.ilivefilter:liteav_pitu:1.1.21'
     compile project(':jcvideoplayer-lib')
     compile files('share_libs/MobCommons-2017.1201.1507.jar')
     dependencies { compile 'com.android.support:multidex:1.0.1' }
-    compile project(':ui')
     compile project(':multi-image-selector')
     compile 'com.jcodecraeer:xrecyclerview:1.3.2'
     compile project(':baseadapter-recyclerview')
+    compile project(':ui')
 }
 //apply plugin: 'AndResGuard'
 apply plugin: 'com.antfortune.freeline'
